[workspace]
resolver = "3"
members = [
  "4-median-of-two-sorted-arrays",
  "10-regular-expression-matching",
  "23-merge-k-sorted-lists",
  "29-divide-two-integer",
  "37-sudoku-solver",
  "43-multiply-strings",
  "45-jump-game-ii",
  "51-n-queens",
  "52-n-queens-2",
  "62-unique-path",
  "63-unique-path-2",
  "64-minimum-path-sum",
  "66-plus-one",
  "67-add-binary",
  "71-simplify-path",
  "72-edit-distance",
  "74-search-a-2d-matrix",
  "75-sort-colors",
  "77-combinations",
  "78-subsets",
  "110-balanced-binary-tree",
  "120-triangle",
  "153-find-minimum-in-rotated-sorted-array",
  "165-compare-version-numbers",
  "166-fraction-to-recurring-decimal",
  "189-rotate-array",
  "191-number-of-1-bits",
  "202-happy-number",
  "206-reverse-linked-list",
  "239-sliding-window-maximum",
  "295-find-median-from-data-stream",
  "342-power-of-four",
  "384-shuffle-an-array",
  "396-rotate-function",
  "401-binary-watch",
  "453-minimum-moves-to-equal-array-elements",
  "470-implement-rand10-using-rand7",
  "478-generate-random-point-in-a-circle",
  "485-max-consecutive-ones",
  "611-valid-triangle-number",
  "657-robot-return-to-origin",
  "679-24-game",
  "693-binary-number-with-alternating-bits",
  "696-count-binary-substrings",
  "705-design-hashset",
  "706-design-hashmap",
  "712-minimum-ascii-delete-sum-for-two-strings",
  "717-one-bit-and-two-bit-characters",
  "744-find-smallest-letter-greater-than-target",
  "747-largest-number-at-least-twice-of-others",
  "756-pyramid-transition-matrix",
  "757-set-intersection-size-at-least-two",
  "761-special-binary-string",
  "762-prime-number-of-set-bits-in-binary-representation",
  "771-jewels-and-stones",
  "788-rotated-digits",
  "796-rotate-string",
  "799-champagne-tower",
  "812-largest-triangle-area",
  "837-new-21-game",
  "840-magic-squares-in-grid",
  "868-binary-gap",
  "874-walking-robot-simulation",
  "944-delete-columns-to-make-sorted",
  "955-delete-columns-to-make-sorted-2",
  "960-delete-columns-to-make-sorted-3",
  "961-n-repeated-element-in-size-2n-array",
  "980-unique-path-3",
  "1009-complement-of-base-10-integer",
  "1015-smallest-integer-divisible-by-k",
  "1017-convert-to-base-negative-2",
  "1018-binary-prefix-divisible-by-5",
  "1022-sum-of-root-to-leaf-binary-numbers",
  "1038-binary-search-tree-to-greater-sum-tree",
  "1047-remove-all-adjacent-duplicates-in-string",
  "1108-defanging-an-ip-address",
  "1200-minimum-absolute-difference",
  "1209-remove-all-adjacent-duplicates-in-string-2",
  "1262-greatest-sum-divisible-by-three",
  "1266-minimum-time-visiting-all-points",
  "1277-count-square-submatrices-with-all-ones",
  "1292-maximum-side-length-of-a-square-with-sum-less-than-or-equal-to-threshold",
  "1320-minimum-distance-to-type-a-word-using-two-fingers",
  "1323-maximum-69-number",
  "1351-count-negative-numbers-in-a-sorted-matrix",
  "1356-sort-integers-by-the-number-of-1-bits",
  "1390-four-divisors",
  "1404-number-of-steps-to-reduce-a-number-in-binary-representation-to-one",
  "1406-stone-game-iii",
  "1411-number-of-ways-to-paint-n-3-grid",
  "1415-the-k-th-lexicographical-string-of-all-happy-strings-of-length-n",
  "1437-check-if-all-1s-are-at-least-length-k-places-away",
  "1446-consecutive-characters",
  "1458-max-dot-product-of-two-subsequences",
  "1461-check-if-a-string-contains-all-binary-codes-of-size-k",
  "1470-shuffle-the-array",
  "1504-count-submatrices-with-all-ones",
  "1512-number-of-good-pairs",
  "1513-number-of-substrings-with-only-1s",
  "1523-count-odd-numbers-in-an-interval-range",
  "1536-minimum-swaps-to-arrange-a-binary-grid",
  "1545-find-kth-bit-in-nth-binary-string",
  "1559-detect-cycles-in-2d-grid",
  "1582-special-positions-in-a-binary-matrix",
  "1590-make-sum-divisible-by-p",
  "1594-maximum-non-negative-product-in-a-matrix",
  "1622-fancy-sequence",
  "1653-minimum-deletions-to-make-string-balanced",
  "1672-richest-customer-wealth",
  "1674-minimum-moves-to-make-array-complementary",
  "1680-concatenation-of-consecutive-binary-numbers",
  "1684-count-the-number-of-consistent-strings",
  "1689-partitioning-into-minimum-number-of-deci-binary-numbers",
  "1722-minimize-hamming-distance-after-swap-operations",
  "1727-largest-submatrix-with-rearrangements",
  "1745-check-if-there-is-a-valid-path-in-a-grid",
  "1758-minimum-changes-to-make-alternating-binary-string",
  "1759-count-number-of-homogenous-substrings",
  "1769-minimum-number-of-operations-to-move-all-balls-to-each-box",
  "1784-check-if-binary-string-has-at-most-one-segment-of-ones",
  "1814-count-nice-pairs-in-an-array",
  "1825-finding-mk-average",
  "1845-seat-reservation-manager",
  "1848-minimum-distance-to-the-target-element",
  "1855-maximum-distance-between-a-pair-of-values",
  "1861-rotating-the-box",
  "1863-sum-of-all-subset-xor-totals",
  "1869-longer-contiguous-segments-of-ones-than-zeros",
  "1877-minimize-maximum-pair-sum-in-array",
  "1878-get-biggest-three-rhombus-sums-in-a-grid",
  "1886-determine-whether-matrix-can-be-obtained-by-rotation",
  "1888-minimum-number-of-flips-to-make-the-binary-string-alternating",
  "1895-largest-magic-square",
  "1914-cyclically-rotating-a-grid",
  "1920-build-array-from-permutation",
  "1925-count-square-sum-triples",
  "1929-concatenation-of-array",
  "1930-unique-length-3-palindromic-subsequences",
  "1935-maximum-number-of-words-you-can-type",
  "1970-last-day-where-you-can-still-cross",
  "1975-maximum-matrix-sum",
  "1980-find-unique-binary-string",
  "1984-minimum-difference-between-highest-and-lowest-of-k-scores",
  "2001-number-of-pairs-of-interchangeable-rectangles",
  "2011-final-value-of-variable-after-performing-operations",
  "2044-count-number-of-maximum-bitwise-or-subsets",
  "2054-two-best-non-overlapping-event",
  "2069-walking-robot-simulation-ii",
  "2075-decode-the-slanted-ciphertext",
  "2078-two-furthest-houses-with-different-colors",
  "2092-find-all-people-with-secret",
  "2110-number-of-smooth-descent-periods-of-a-stock",
  "2141-maximum-running-time-of-n-computers",
  "2147-number-of-ways-to-divide-a-long-corridor",
  "2154-keep-multiplying-found-values-by-two",
  "2181-merge-nodes-in-between-zeros",
  "2197-replace-non-coprime-numbers-in-array",
  "2211-count-collisions-on-a-road",
  "2348-number-of-zero-filled-subarrays",
  "2349-design-a-number-container-system",
  "2353-design-a-food-rating-system",
  "2364-count-number-of-bad-pairs",
  "2396-strictly-palindromic-number",
  "2402-meeting-rooms-3",
  "2435-paths-in-matrix-whose-sum-is-divisible-by-k",
  "2452-words-within-two-edits-of-dictionary",
  "2455-average-value-of-even-numbers-that-are-divisible-by-three",
  "2463-minimum-total-distance-traveled",
  "2469-convert-the-temperature",
  "2483-minimum-penalty-for-a-shop",
  "2506-count-pair-of-similar-strings",
  "2515-shortest-distance-to-target-string-in-a-circular-array",
  "2553-separate-the-digits-in-an-array",
  "2573-find-the-string-with-lcp",
  "2615-sum-of-distances",
  "2644-find-the-maximum-divisibility-score",
  "2716-minimize-string-length",
  "2751-robot-collisions",
  "2769-find-the-maximum-achievable-number",
  "2770-maximum-number-of-jumps-to-reach-the-last-index",
  "2784-check-if-array-is-good",
  "2807-insert-greatest-common-divisors-in-linked-list",
  "2833-furthest-point-from-origin",
  "2839-check-if-strings-can-be-made-equal-with-operations-i",
  "2840-check-if-strings-can-be-made-equal-with-operations-ii",
  "2872-maximum-number-of-k-divisible-components",
  "2894-divisible-and-non-divisible-sums-difference",
  "2906-construct-product-matrix",
  "2942-find-words-containing-character",
  "2943-maximize-area-of-square-hole-in-grid",
  "2946-matrix-similarity-after-cyclic-shifts",
  "2975-maximum-square-area-by-removing-fences-from-a-field",
  "2976-minimum-cost-to-convert-string-i",
  "2977-minimum-cost-to-convert-string-ii",
  "2980-check-if-bitwise-or-has-trailing-zeros",
  "3005-count-elements-with-maximum-frequency",
  "3010-divide-an-array-into-subarrays-with-minimum-cost-i",
  "3013-divide-an-array-into-subarrays-with-minimum-cost-ii",
  "3047-find-the-largest-area-of-square-inside-two-rectangles",
  "3070-count-submatrices-with-top-left-element-and-sum-less-than-k",
  "3074-apple-redistribution-into-boxes",
  "3075-maximize-happiness-of-selected-children",
  "3110-score-of-a-string",
  "3129-find-all-possible-stable-binary-arrays-i",
  "3190-find-minimum-operations-to-make-all-elements-divisible-by-three",
  "3195-find-the-minimum-area-to-cover-all-ones",
  "3212-count-submatrices-with-equal-frequency-of-x-and-y",
  "3234-count-the-number-of-substrings-with-dominant-ones",
  "3280-convert-date-to-binary",
  "3289-the-two-sneaky-numbers-of-digitville",
  "3296-minimum-number-of-seconds-to-make-mountain-height-zero",
  "3314-construct-the-minimum-bitwise-array-i",
  "3315-construct-the-minimum-bitwise-array-ii",
  "3379-transformed-array",
  "3381-maximum-subarray-sum-with-length-divisible-by-k",
  "3408-design-task-manager",
  "3418-maximum-amount-of-money-robot-can-earn",
  "3433-count-mentions-per-user",
  "3453-seperate-squares-1",
  "3464-maximize-the-distance-between-points-on-a-square",
  "3467-transform-array-by-parity",
  "3474-lexicographically-smallest-generated-string",
  "3484-design-spread-sheet",
  "3488-closest-equal-element-queries",
  "3507-minimum-pair-removal-to-sort-array-i",
  "3508-implement-router",
  "3512-minimum-operations-to-make-array-sum-divisible-by-k",
  "3516-find-closest-person",
  "3531-count-covered-buildings",
  "3541-find-most-frequent-vowel-and-consonant",
  "3542-minimum-operation-to-convert-all-element-to-zero",
  "3546-equal-sum-grid-partition-i",
  "3548-equal-sum-grid-partition-ii",
  "3567-minimum-absolute-difference-in-sliding-submatrix",
  "3573-best-time-to-buy-and-sell-stock-v",
  "3577-count-the-number-of-computer-unlocking-permutations",
  "3583-count-special-triplets",
  "3606-coupon-code-validator",
  "3623-count-number-of-trapezoids-i",
  "3625-count-number-of-trapezoids-ii",
  "3629-minimum-jumps-to-reach-end-via-prime-teleportation",
  "3634-minimum-removals-to-balance-array",
  "3637-trionic-array-i",
  "3640-trionic-array-ii",
  "3643-flip-square-submatrix-vertically",
  "3650-minimum-cost-path-with-edge-reversals",
  "3651-minimum-cost-path-with-teleportations",
  "3652-best-time-to-buy-and-sell-stock-using-strategy",
  "3653-xor-after-range-multiplication-queries-i",
  "3655-xor-after-range-multiplication-queries-ii",
  "3660-jump-game-ix",
  "3661-maximum-walls-destroyed-by-robots",
  "3666-minimum-operations-to-equalize-binary-string",
  "3668-restore-finishing-order",
  "3701-compute-alternating-sum",
  "3713-longest-balanced-substring-i",
  "3714-longest-balanced-substring-ii",
  "3719-longest-balanced-subarray-i",
  "3721-longest-balanced-subarray-ii",
  "3740-minimum-distance-between-three-equal-elements-i",
  "3741-minimum-distance-between-three-equal-elements-ii",
  "3742-maximum-path-score-in-a-grid",
  "3760-maximum-substrings-with-distinct-start",
  "3761-minimum-absolute-distance-between-mirror-pairs",
  "3771-total-score-of-dungeon-runs",
  "3783-mirror-distance-of-an-integer",
  "3794-reverse-string-prefix",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
itertools = "0.14.0"
rand = "0.9.2"
